--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,29 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+   <meta charset="utf-8">
   <title>DemoApp</title>
+
   <base href="/">
+<head>
+
+
+   <style> html, body { margin: 0; padding: 0; height: 100%; } </style>
+
+    
+  
+
+ 
+  <script>
+
+    </script>
+ 
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <router-outlet></router-outlet>
   <app-root></app-root>
+ 
 </body>
 </html>
